2010-05-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14387: Updating the CGLs [was: Remove the feature "Enable extensions without review (basic security check)" from EM] (thanks to Lars Houmark)

2010-05-22  Oliver Hader  <oliver@typo3.org>

	* Added feature #13868: Integrate TYPO3 donate notice in the backend

2010-05-22  Benjamin Mack  <benni@typo3.org>

	* Follow up to #13379: Removed generation parts of Sprite Icon API (Thanks to Steffen Ritter)
	* Fixed bug #12923: Javascript error in tmenu_layers.php & gmenu_layers.php (Thanks to Klaus Goessl)

2010-05-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14191: Install tool lacks hint of how to create ENABLE_INSTALL_TOOL (thanks to Steffen Gebert)
	* Fixed bug #14328: Include prototype+scriptaculous using API at the login screen (thanks to Steffen Gebert)
	* Added Feature #14324: Add spriteGeneratorAPI to support the new sprite-icon-API (thanks to Steffen Ritter)

2010-05-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14175: belog not shown / error when actions: error is selected (thanks to Philipp Thiele)

2010-05-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14443: Deprecate $TYPO3_CONF_VARS[GFX][TTFLocaleConv]
	* Cleaned up #9416: Code Cleanup for lang.php (Thanks to Stefano Kowalke)
	* Fixed bug #6555: template.relPathPrefix causes decoding of html-entities in affected attributes (Thanks to Martin Ficzel)
	* Fixed bug #13749: IRRE: Inline elements of translated records are not coppied correctly. (Thanks to Albrecht Koehnlein)

2010-05-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #7753: EM warns No XCLASS inclusion code found if you use $GLOBALS['TYPO3_CONF_VARS'] (thanks to Franz Holzinger)

2010-05-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #14413: htmlArea RTE: ExtJS resources are not released in IE when RTE closes

2010-05-18  Benjamin Mack  <benni@typo3.org>

	* Follow-up to #14277: Removed redundant code / Improve t3lib_compressor
